@@ -8,27 +8,36 @@ eval '(exit $?0)' && eval 'exec perl -S $0 ${1+"$@"}'
 
 
 use lib "$ENV{ACE_ROOT}/bin";
-use PerlACE::Run_Test;
+use PerlACE::TestTarget;
 
-$file1base = "test1.ior";
-$file1 = PerlACE::LocalFile ("$file1base");
-$file2 = PerlACE::LocalFile ("test2.ior");
-$file3 = PerlACE::LocalFile ("test3.ior");
+my $server1 = PerlACE::TestTarget::create_target (1) || die "Create target 1 failed\n";
+my $server2 = PerlACE::TestTarget::create_target (2) || die "Create target 2 failed\n";
+my $server3 = PerlACE::TestTarget::create_target (3) || die "Create target 3 failed\n";
+my $client  = PerlACE::TestTarget::create_target (4) || die "Create target 4 failed\n";
 
-unlink $file1;
-unlink $file2;
-unlink $file3;
+my $iorbase1 = "test1.ior";
+my $iorbase2 = "test2.ior";
+my $iorbase3 = "test3.ior";
 
-if (PerlACE::is_vxworks_test()) {
-$SV1 = new PerlACE::ProcessVX ("server", "-o $file1base -c 1 -n 1 -s 1");
-}
-else {
-$SV1 = new PerlACE::Process ("server", "-o $file1 -c 1 -n 1 -s 1");
-}
-$SV2 = new PerlACE::Process ("server", "-o $file2 -n 2 -s 2");
-$SV3 = new PerlACE::Process ("server", "-o $file3 -n 3 -s 3");
-$CL = new PerlACE::Process ("client", 
-                    "-p file://$file1 -f file://$file2 -s file://$file3");
+my $server1_iorfile = $server1->LocalFile ($iorbase1);
+my $server2_iorfile = $server2->LocalFile ($iorbase2);
+my $server3_iorfile = $server3->LocalFile ($iorbase3);
+my $client_iorfile1 = $client->LocalFile ($iorbase1);
+my $client_iorfile2 = $client->LocalFile ($iorbase2);
+my $client_iorfile3 = $client->LocalFile ($iorbase3);
+
+$server1->DeleteFile ($iorbase1);
+$server2->DeleteFile ($iorbase2);
+$server2->DeleteFile ($iorbase3);
+$client->DeleteFile ($iorbase1);
+$client->DeleteFile ($iorbase2);
+$client->DeleteFile ($iorbase3);
+
+$SV1 = $server1->CreateProcess ("server", "-o $server1_iorfile -c 1 -n 1 -s 1");
+$SV2 = $server2->CreateProcess ("server", "-o $server2_iorfile -n 2 -s 2");
+$SV3 = $server2->CreateProcess ("server", "-o $server3_iorfile -n 3 -s 3");
+$CL  = $client->CreateProcess ("client", 
+                    "-p file://$client_iorfile1 -f file://$client_iorfile2 -s file://$client_iorfile3");
 
 $status = 0;
 
@@ -38,40 +47,43 @@ $SV1->Spawn ();
 $SV2->Spawn ();
 $SV3->Spawn ();
 
-if (PerlACE::waitforfile_timed ($file1, $PerlACE::wait_interval_for_process_creation) == -1) {
-    print STDERR "ERROR: cannot find file <$file1>\n";
-    $SV1->Kill ();
+if ($server1->WaitForFileTimed ($iorbase1,
+                               $server1->ProcessStartWaitInterval()) == -1) {
+    print STDERR "ERROR: cannot find file <$server1_iorfile>\n";
+    $SV1->Kill (); $SV1->TimedWait (1);
     exit 1;
 }
 
-if (PerlACE::waitforfile_timed ($file2, $PerlACE::wait_interval_for_process_creation) == -1) {
-    print STDERR "ERROR: cannot find file <$file2>\n";
-    $SV2->Kill ();
+if ($server1->WaitForFileTimed ($iorbase2,
+                               $server2->ProcessStartWaitInterval()) == -1) {
+    print STDERR "ERROR: cannot find file <$server2_iorfile>\n";
+    $SV2->Kill (); $SV2->TimedWait (1);
     exit 1;
 }
 
-if (PerlACE::waitforfile_timed ($file3, $PerlACE::wait_interval_for_process_creation) == -1) {
-    print STDERR "ERROR: cannot find file <$file3>\n";
-    $SV3->Kill ();
+if ($server1->WaitForFileTimed ($iorbase3,
+                               $server3->ProcessStartWaitInterval()) == -1) {
+    print STDERR "ERROR: cannot find file <$server3_iorfile>\n";
+    $SV3->Kill (); $SV3->TimedWait (1);
     exit 1;
 }
 
-$client = $CL->SpawnWaitKill (60);
+$client_status = $CL->SpawnWaitKill ($client->ProcessStartWaitInterval());
 
-if ($client != 0) {
-    print STDERR "ERROR: client returned $client\n";
+if ($client_status != 0) {
+    print STDERR "ERROR: client returned $client_status\n";
     $status = 1;
 }
 
-$server1 = $SV1->WaitKill (15);
+$server1_status = $SV1->WaitKill ($server1->ProcessStopWaitInterval());
 
 # The first server will crash by design and in such instance it will
 # return the magic number 1. The test must not interpret it as an
 # error.
 
-if ($server1 != 0) {
-    if ($server1 != 1) {
-        print STDERR "ERROR: server1 returned $server1\n";
+if ($server1_status != 0) {
+    if ($server1_status != 1) {
+        print STDERR "ERROR: server1 returned $server1_status\n";
         $status = 1;
     }
     else {
@@ -79,14 +91,14 @@ if ($server1 != 0) {
     }
 }
 
-$server2 = $SV2->WaitKill (15);
+$server2_status = $SV2->WaitKill ($server2->ProcessStopWaitInterval());
 
 # The second server will crash by design and in such instance it will
 # return the magic number 1. The test must not interpret it as an
 # error.
-if ($server2 != 0) {
-    if ($server2 != 1) {
-        print STDERR "ERROR: server2 returned $server2\n";
+if ($server2_status != 0) {
+    if ($server2_status != 1) {
+        print STDERR "ERROR: server2 returned $server2_status\n";
         $status = 1;
     }
     else {
@@ -94,15 +106,18 @@ if ($server2 != 0) {
     }
 }
 
-$server3 = $SV3->WaitKill (15);
+$server3_status = $SV3->WaitKill ($server3->ProcessStopWaitInterval());
 
-if ($server3 != 0) {
-    print STDERR "ERROR: server3 returned $server3\n";
+if ($server3_status != 0) {
+    print STDERR "ERROR: server3 returned $server3_status\n";
     $status = 1;
 }
 
-unlink $file1;
-unlink $file2;
-unlink $file3;
+$server1->DeleteFile ($iorbase1);
+$server2->DeleteFile ($iorbase2);
+$server2->DeleteFile ($iorbase3);
+$client->DeleteFile ($iorbase1);
+$client->DeleteFile ($iorbase2);
+$client->DeleteFile ($iorbase3);
 
 exit $status;
