@@ -8,23 +8,29 @@ eval '(exit $?0)' && eval 'exec perl -S $0 ${1+"$@"}'
 
 
 use lib "$ENV{ACE_ROOT}/bin";
-use PerlACE::Run_Test;
+use PerlACE::TestTarget;
 
-$file1base = "test.ior";
-$file1 = PerlACE::LocalFile ("$file1base");
-$file2 = PerlACE::LocalFile ("test2.ior");
+my $server1 = PerlACE::TestTarget::create_target (1) || die "Create target 1 failed\n";
+my $server2 = PerlACE::TestTarget::create_target (2) || die "Create target 2 failed\n";
+my $client  = PerlACE::TestTarget::create_target (3) || die "Create target 3 failed\n";
 
-unlink $file1;
-unlink $file2;
+my $iorbase1 = "test.ior";
+my $iorbase2 = "test2.ior";
 
-if (PerlACE::is_vxworks_test()) {
-$SV1 = new PerlACE::ProcessVX ("server", "-o $file1base -c 1 -n 1");
-}
-else {
-$SV1 = new PerlACE::Process ("server", "-o $file1 -c 1 -n 1");
-}
-$SV2 = new PerlACE::Process ("server", "-o $file2 -n 2");
-$CL = new PerlACE::Process ("client", "-p file://$file1 -s file://$file2");
+my $server1_iorfile = $server1->LocalFile ($iorbase1);
+my $server2_iorfile = $client->LocalFile ($iorbase2);
+my $client_iorfile  = $client->LocalFile ($iorbase2);
+
+$server1->DeleteFile($iorbase1);
+$server1->DeleteFile($iorbase2);
+$server2->DeleteFile($iorbase1);
+$server2->DeleteFile($iorbase2);
+$client->DeleteFile($iorbase1);
+$client->DeleteFile($iorbase2);
+
+$SV1 = $server1->CreateProcess ("server", "-o $server1_iorfile -c 1 -n 1");
+$SV2 = $server2->CreateProcess ("server", "-o $server2_iorfile -n 2");
+$CL  = $client->CreateProcess ("client", "-p file://$server1_iorfile -s file://$client_iorfile");
 
 $status = 0;
 
@@ -32,36 +38,38 @@ print STDERR "\n\n==== Running PortableInterceptor::Redirection test\n";
 
 $SV1->Spawn ();
 
-if (PerlACE::waitforfile_timed ($file1, $PerlACE::wait_interval_for_process_creation) == -1) {
-    print STDERR "ERROR: cannot find file <$file1>\n";
-    $SV1->Kill ();
+if ($server1->WaitForFileTimed ($iorbase1,
+                               $server1->ProcessStartWaitInterval()) == -1) {
+    print STDERR "ERROR: cannot find file <$server1_iorfile>\n";
+    $SV1->Kill (); $SV1->TimedWait (1);
     exit 1;
 }
 
 $SV2->Spawn ();
 
-if (PerlACE::waitforfile_timed ($file2, $PerlACE::wait_interval_for_process_creation) == -1) {
-    print STDERR "ERROR: cannot find file <$file2>\n";
-    $SV2->Kill ();
+if ($server2->WaitForFileTimed ($iorbase2,
+                               $server2->ProcessStartWaitInterval()) == -1) {
+    print STDERR "ERROR: cannot find file <$server2_iorfile>\n";
+    $SV2->Kill (); $SV2->TimedWait (1);
     exit 1;
 }
 
-$client = $CL->SpawnWaitKill (60);
+$client_status = $CL->SpawnWaitKill ($client->ProcessStartWaitInterval());
 
-if ($client != 0) {
-    print STDERR "ERROR: client returned $client\n";
+if ($client_status != 0) {
+    print STDERR "ERROR: client returned $client_status\n";
     $status = 1;
 }
 
-$server1 = $SV1->WaitKill (5);
+$server1_status = $SV1->WaitKill ($server1->ProcessStopWaitInterval());
 
 # The first server will crash by design and in such instance it will
 # return the magic number 1. The test must not interpret it as an
 # error.
 
-if ($server1 != 0) {
-    if ($server1 != 1) {
-        print STDERR "ERROR: server1 returned $server1\n";
+if ($server1_status != 0) {
+    if ($server1_status != 1) {
+        print STDERR "ERROR: server1 returned $server1_status\n";
         $status = 1;
     }
     else {
@@ -69,14 +77,18 @@ if ($server1 != 0) {
     }
 }
 
-$server2 = $SV2->WaitKill (15);
+$server2_status = $SV2->WaitKill ($server2->ProcessStopWaitInterval());
 
-if ($server2 != 0) {
-    print STDERR "ERROR: server2 returned $server2\n";
+if ($server2_status != 0) {
+    print STDERR "ERROR: server2 returned $server2_status\n";
     $status = 1;
 }
 
-unlink $file1;
-unlink $file2;
+$server1->DeleteFile($iorbase1);
+$server1->DeleteFile($iorbase2);
+$server2->DeleteFile($iorbase1);
+$server2->DeleteFile($iorbase2);
+$client->DeleteFile($iorbase1);
+$client->DeleteFile($iorbase2);
 
 exit $status;
